hphp/hack/test/typecheck/is_expression/valid_hint_class3.php.exp
File "valid_hint_class3.php", line 12, characters 5-15:
  exact C<int>
File "valid_hint_class3.php", line 9, characters 13-21:
Invalid "is" expression hint (Typing[4199])
  File "valid_hint_class3.php", line 9, characters 13-21:
  The "is" operator should not be used with a type with generics, because generics are erased at runtime
